objects/CA_Email_Reference_Pattern__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>CA_Incoming_Outgoing__c</fullName>
        <label>CA Incoming Outgoing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Order__c</fullName>
        <label>CA Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Pattern__c</fullName>
        <label>Email Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CA Email Reference Pattern</label>
</CustomObject>